infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        ingress.kubernetes.io/rewrite-target: /admin
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: xsocial.dev
          http:
              paths:
                  - path: /api/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: api-gateway-srv
                            port:
                                number: 3000
                  - path: /socket.io/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: socketio-srv
                            port:
                                number: 8900
                  - path: /?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: client-srv
                            port:
                                number: 3000
        - host: admin.xsocial.dev
          http:
              paths:
                  - path: /api/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: api-gateway-srv
                            port:
                                number: 3000
                  - path: /?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: admin-srv
                            port:
                                number: 3000
    tls:
        - hosts:
              - xsocial.dev
          secretName: xsocial-tls-secret
# change this
